--- a/car_rental/index.html
+++ b/car_rental/index.html
@@ -12,5 +12,19 @@
     <a href="register.php">Register</a>
     <div id="car-list"></div>
     <script src="script.js"></script>
+
+    <form action="register.php" method="post">
+        Username: <input type="text" name="username" required><br>
+        Password: <input type="password" name="password" required><br>
+        Email: <input type="email" name="email" required><br>
+        <input type="submit">
+    </form>
+
+    <form action="login.php" method="post">
+        Username: <input type="text" name="username" required><br>
+        Password: <input type="password" name="password" required><br>
+        <input type="submit">
+    </form>
+    
 </body>
 </html>
