--- a/car_rental/index.html
+++ b/car_rental/index.html
@@ -20,11 +20,16 @@
         <input type="submit">
     </form>
 
+    
+
     <form action="login.php" method="post">
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
         <input type="submit">
     </form>
+
+    <h2>List of cars</h2>
+
     
 </body>
 </html>
