--- a/car_rental/index.html
+++ b/car_rental/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Rental</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Welcome to Car Rental</h1>
@@ -20,7 +20,7 @@
         <input type="submit">
     </form>
 
-    
+
 
     <form action="login.php" method="post">
         Username: <input type="text" name="username" required><br>
